kube-manifests/01-DEVOPS-Ingressclass-Resource.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: eks-bmp-efranchise-python-ingress-class
  namespace: dev
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: ingress.k8s.aws/alb
