kube-manifests/03-DEVOPS-Nginx-NodePortService.yml
apiVersion: v1
kind: Service
metadata:
  name: eks-bmp-efranchise-python-nodeport-service
  namespace: dev
  labels:
    app: eks-bmp-efranchise-python  
spec:
  type: NodePort
  selector:
    app: eks-bmp-efranchise-python
  ports:
    - port: 80
      targetPort: 80
